Add bun and lint diagnostic step
- Test if bun is in PATH and working
- Run lint only to verify basic functionality

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,14 @@ jobs:
         run: |
           gcloud compute firewall-rules describe scalebox-test-allow --project="$GCLOUD_PROJECT" || echo "Firewall rule not found"
 
+      - name: Test bun and lint
+        run: |
+          echo "Testing bun..."
+          which bun
+          bun --version
+          echo "Running lint only..."
+          ./do lint
+
       - name: Run CI (lint, build, test)
         env:
           GCLOUD_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
