--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,8 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.9.0/schema.json",
+	"files": {
+		"ignore": ["gha-creds-*.json", ".bun/**"]
+	},
 	"organizeImports": {
 		"enabled": true
 	},
