Add KillMode=process so VMs survive scaleboxd restarts
- Set KillMode=process in scaleboxd.service so systemd only kills
  scaleboxd, not Firecracker child processes
- Implement restart sub-test: create VM, restart scaleboxd, verify VM
  survives

Plan: 023 — Orphan Reconciliation (Phase 2)

--- a/scripts/scaleboxd.service
+++ b/scripts/scaleboxd.service
@@ -9,6 +9,7 @@ ExecStart=/usr/local/bin/scaleboxd
 EnvironmentFile=/etc/scaleboxd/config
 Restart=on-failure
 RestartSec=5
+KillMode=process
 
 [Install]
 WantedBy=multi-user.target
